some gh command added as list

--- a/index.html
+++ b/index.html
@@ -23,8 +23,27 @@
     <li> git show </li>
     <li> git remote -l</li>
     <li> git commit</li>
- </ol>
- <hr>
+  </ol>
+  <hr>
+  <h2>Learning gh command line tool</h2>
+  <h3>gh command list</h3>
+  <p>gh auth command lsit</p>
+  <ol>
+    <li><code>gh auth login</code></li>
+    <li><code>gh auth logout</code></li>
+    <li><code>gh auth status</code></li>
+    <li><code>gh auth setup-git</code></li>
+  </ol>
+  <p>gh repo command lsit</p>
+  <ol>
+    <li><code>gh repo list</code></li>
+    <li><code>gh repo clone repo-name</code></li>
+    <li><code>gh repo create</code></li>
+  </ol>
+
+
+
+
  <footer>
   <nav class="fmenu">
     <a href="README.md" class="right">README</a>
